--- a/chapter2_roles_follower.tex
+++ b/chapter2_roles_follower.tex
@@ -19,13 +19,12 @@
 \begin{frame}
   \begin{scratch}
     \blockmove{set variable \ovalvariable{most wanted holder} as \txtbox{0}}
-    \blockmove{set variable \ovalvariable{most wanted follower} as \txtbox{0}}
     \blockrepeat{for each \ovalvariable{line} in file \txtbox{example.txt}}
     {
         \blockmove{set variable \ovalvariable{number} as numerical value of \ovalvariable{line}}
         \blockif{ if \booloperator{ \ovalvariable{number} $>$ \ovalvariable{most wanted holder} } }
         {
-          \blockmove{set variable \ovalvariable{most wanted follower} as \ovalvariable{most wanted holder} }
+          \blockmove{set variable \ovalvariable{most wanted holder} as \ovalvariable{number} }
         }
     }
   \end{scratch}
